# course-scraper-job

./: .env  .env.example  .gitignore  Dockerfile  README.md  celery_app.py  celerybeat-schedule.db  data.json  demo.json  demo.py  docker-compose.yml  ecosystem.config.js  entrypoint.sh  example.json  flowerconfig.py  prompter.py  pyproject.toml  requirements.txt  run_task.py  secrets.env  secrets.prod.env  setup.py  sfu-data.json  ubc-data.json  ubc-scraper.py  values.env
.github/: deploy-apprunner.sh
.github/workflows/: deploy.yml
.sops/: prod.env
api/: main.py
app/: __init__.py
app/config/: logging.py  settings.py
app/models/: course.py  task.py
app/storage/: __init__.py  base.py  local.py  s3.py
app/tasks/: __init__.py  base.py  scraper_task.py
app/utils/: async_utils.py  llm_html_parser.py
config/: logging.py  settings.py
converter/: converter.py
course-scraper-job/: .env.example  .gitignore  README.md  celery_app.py  docker-compose.yml  entrypoint.sh  requirements.txt
course-scraper-job/config/: __init__.py  settings.py
course-scraper-job/models/: course.py
course-scraper-job/scrapers/: sample.py  simon_fraser_university.py
course-scraper-job/storage/: base.py  local.py  s3.py
course_crawler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
curator/: curator.json  curator.py
models/: __init__.py  course.py  task.py
parser/: prompter.py
scrapers/: __init__.py  base.py  main.py  sample.py  sfuScraper.py  simon_fraser_university.py  ubcScraper.py
storage/: __init__.py  base.py  s3.py
utils/: date_parser.py
(+25 files in other folders)
