[project]
name = "course-scraper-job"
version = "1.0.0"
description = "Course scraper job for Kogo"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "celery==5.3.6",
    "redis==5.0.1",
    "httpx==0.26.0",
    "playwright==1.49.1",
    "boto3==1.34.34",
    "litellm==1.21.7",
    "flower==2.0.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "pyyaml",
    "asyncio",
    "Faker==22.6.0",
    "factory-boy==3.3.0",
    "pytz==2024.1",
    "setuptools>=42"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv.sync]
groups = ["default"]

[tool.rye]
managed = true
dev-dependencies = []
